styles/Home.module.css
/* ... */
.sec-gradient-bg-overlay::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-image: url('/images/shapes/brandGradientBorder.png');
  background-repeat: no-repeat;
  background-size: 98% 90%;
  background-position: center;
}

@media (max-width: 1024px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('/images/shapes/brandGradientBorderMD.png');
  }
}

@media (max-width: 768px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('/images/shapes/brandGradientBorder.png');
  }
}

/* ================ Slider ================ */
.slider-img {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  overflow: hidden;
}

/* ================ Review Scroller ================ */
  /* 
   * Adjust height this value to match the height of your content 
   * position: relative; is important for the animation to work as it allows us to make both content bars 100vw wide
   */

.scrolling-review {
  overflow: hidden;
  display: flex;
  width: 2500px !important;
  position: relative;
  height: 15em; 
  overflow: hidden;
}

.scrolling-review-content{
  position: absolute;
  width: 100% !important; 
  animation: scroll 50s linear infinite;
}
.scrolling-review-content:hover{
  animation-play-state: paused;
}


.scrolling-review-content-bar-1 {
  display: flex;
  position: absolute;
  justify-content: space-around;
  width: 100% !important; 
  color: #fff;
  background: var(--brand-gradient-background-color);
}

  /* 
   * left: 100vw; places the content bar off screen to the right
   */
.scrolling-review-content-bar-2 {
  display: flex;
  position: absolute;
  left: 2499px;
  justify-content: space-around;
  width: 100% !important; /* Twice the width of the parent */
  color: #fff;
  background: var(--brand-gradient-background-reverse-color);
}

/* ================ Reviews ================ */
.review {
  color: #fff;
  width: 20em;
  height: 15em
}

.review-text{
  /* height: 8em; a height component here will stop text-overflow: ellipsis; from working */
  display: -webkit-box;
  -webkit-line-clamp: 3; /* number of lines to display */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.review-link{
  border: solid 2px #fff;
  margin-top: 20px;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 2.5px;
}

.review-google{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 100vw;
  background-color: var(--brand-purple);
  transition: background-color ease-in-out 0.9s;
}
.review-google:hover{
  background-color: var(--brand-orange);
  transition: background-color ease-in-out 0.9s;
}

.review-google-link{
  color: #fff;
  font-weight: 700;
  width: 100%;
  height: 100%;
  text-align: center;
  padding-top: 0.5em;
}

/* ================ Map ================ */

.map{

}

.map-info{
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #000000;
  color: #fff;
  min-width: 200px;
  height: fit-content;
  border-radius: 8px;
  padding: 10px !important;
  background-image: url('/images/map/brandGradientMapInfoBorder.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center;
  transform: translate(-50%, -300%);

} 

.map-info-close{
  position: absolute;
  top: 5px;
  left: 180px
}

.map-info-header{
  font-weight: 700;
}

.map-info-text{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.map-info-link{
  color: blue;
  padding-top: 4px;
  font-weight: 700;
  font-size: small;
}

.map-info-link:hover{
  text-decoration: underline;
  cursor: pointer;
}

/* ================ Location ================ */

.location-map-container{
  width: 100%;
  height: 100%;
}

.location{

  
}

.location-drawer-location {
  display: flex;
  flex-direction: column;
  gap: .5em;
}

.location-drawer-location-title{
  font-size: 20px;
  font-weight:700;
}

.location-drawer-location-address{
  text-decoration: underline;
}

.location-drawer-location-hours h2{
  font-size: 15px;
  font-weight:700;
}

.location-drawer-location-zoom-btn{
  border: solid 2px #000;
  padding: 5px 10px;
  margin-top: 10px;
}

/* ================ Contact Form ================ */
.contact-form{
  padding: 0 2em;
}

.contact-form-title{
  color: #fff;
}

.contact-form-content{

}

.contact-form-content-name{

}

.contact-form-content-email{

}

.contact-form-content-message{
  height: 10em;
}

.contact-form-content-date-time{

}

.contact-form-content-phonenumber{

}

.contact-form-content-submit{

}

.contact-form-content-submit-btn{
  color: #fff;
  padding: 5px 10px;
  margin-top: 1em;
  margin-bottom: 1em;
  border: solid 2px #fff;

}

/* ================ Booking ================ */

.booking-header{
  display: flex;
  justify-content: center;
  width: 100%;

}

.booking-header-content{
  width: 100%;
  height: 20em;
  color: #fff;
  /* linear-gradient darkens image so Text can be overlayed */
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/booking/catering.jpeg');
  background-size: cover;
  background-position: center;
  margin: 0 2em;
}

.booking-header-content h1 {
  font-size: 3rem;
  font-weight: 700;
  text-transform: uppercase;
  text-align: center;
  padding-top: 2em;

}

.booking-header-content p {
  font-size: 1rem;
  text-transform: uppercase;
  text-align: center;
  padding-top: 2em;

}

.booking-hero{
  padding-top: 2em;
}

.booking-hero-img{

}

.booking-contact-form{
  margin-top: 10em;
}

@media (max-width: 768px) {
  .booking-contact-form{
    margin-top: 2em;
  }
}

.booking-contactus{
  color: #fff;
  padding: 10px;
  margin: 0 2em;
  margin-bottom: 4em ;
}

.booking-contactus h1{
  font-weight: 700;
  font-size: 5rem;
}

.booking-hero-content{
  display: flex;
  justify-content: space-around;
  gap: 1em;
  padding: 0 2em;
}
/* ... */

